Fix wrapping

--- a/resources/assets/sass/_units.scss
+++ b/resources/assets/sass/_units.scss
@@ -142,3 +142,9 @@
 .grow.grow {
     flex-grow: 1;
 }
+
+@media (min-width: 110ex) {
+    .row.row {
+        flex-wrap: nowrap;
+    }
+}
